--- a/style.css
+++ b/style.css
@@ -1373,6 +1373,7 @@ Articles
     padding: 10px 50px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    grid-items:center;
     gap: 16px;
     
 }
